# MedicalLoan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.ini  constants.py  database.py  main.py  medical_equipment.db  paths.py  pyproject.toml  reports.py  requirements.txt
.github/workflows/: ci.yml
.kiro/steering/: improvement-plan.md
medicalloan/: __init__.py  __main__.py  app.py  preferences.py
medicalloan/i18n/: __init__.py  ar.py  en.py  he.py  translator.py
medicalloan/reports/: __init__.py  agreement.py  builder.py  fonts.py  generator.py  inventory.py  loans.py  rtl.py  strings.py
medicalloan/ui/: __init__.py  dialogs.py  status_bar.py  styles.py  treeview.py  validators.py
medicalloan/ui/views/: __init__.py  borrowers.py  dashboard.py  data_io.py  inventory.py  new_loan.py  process_return.py  reports.py
medicalloan/ui/widgets/: __init__.py  form_row.py  search_frame.py
scripts/: build_exe.py
services/: backup_service.py
tests/: conftest.py  test_backup_restore.py  test_backup_service.py  test_database.py  test_migration.py  test_phase3_decomposition.py  test_preferences.py  test_reports_smoke.py  test_status_bar.py
